--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,26 @@
-# Database - Get from Neon.tech, Supabase, Railway, or any PostgreSQL provider
-DATABASE_URL="postgresql://username:password@host:5432/database?sslmode=require"
+# ===========================================
+# DATABASE - PostgreSQL
+# ===========================================
+# Local PostgreSQL
+DATABASE_URL="postgresql://postgres:password@localhost:5432/delphine?schema=public"
 
-# NextAuth - Generate with: openssl rand -base64 32
-NEXTAUTH_SECRET="your-secret-key-here-generate-with-openssl"
+# OR use a cloud provider like Neon, Supabase, Railway, etc:
+# DATABASE_URL="postgresql://user:password@host:5432/database?sslmode=require"
+
+# ===========================================
+# AUTHENTICATION
+# ===========================================
+NEXTAUTH_SECRET="your-super-secret-key-here-change-this"
 NEXTAUTH_URL="http://localhost:3000"
 
-# For production, change NEXTAUTH_URL to your domain
-# NEXTAUTH_URL="https://yourdomain.com"
+# ===========================================
+# POK PAYMENT - https://merchant.pokpay.io/
+# ===========================================
+# Get these from POK Merchant Dashboard
+POK_API_URL="https://api-staging.pokpay.io"
+POK_KEY_ID="your-pok-key-id"
+POK_KEY_SECRET="your-pok-key-secret"
+POK_MERCHANT_ID="your-pok-merchant-id"
+
+# For production, change to:
+# POK_API_URL="https://api.pokpay.io"
