--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,39 @@
 # Dependencies
-/node_modules
-/.pnp
+node_modules/
+.pnp
 .pnp.js
 
-# Testing
-/coverage
+# Build
+.next/
+out/
+build/
+dist/
 
-# Next.js
-/.next/
-/out/
+# Environment
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Production
-/build
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Prisma
+prisma/migrations/
 
 # Misc
-.DS_Store
-*.pem
-
-# Debug
-npm-debug.log*
-
-# Local env files
-.env*.local
-.env
-
-# Vercel
+*.log
 .vercel
-
-# TypeScript
-*.tsbuildinfo
-next-env.d.ts
