--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,7 @@
-# Dependencies
 node_modules/
-.pnp
-.pnp.js
-
-# Build
 .next/
-out/
-build/
-dist/
-
-# Environment
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
-
-# OS
+.env.production
 .DS_Store
-Thumbs.db
-
-# Prisma
-prisma/migrations/
-
-# Misc
 *.log
-.vercel
